# smdc-toolchain

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/smd/: Cargo.toml
crates/smd/examples/: minimal.rs  pong.genesis-rs  pong.rs
crates/smd/src/: input.rs  lib.rs  psg.rs  sprite.rs  types.rs  vdp.rs  ym2612.rs  z80.rs
crates/smd/tests/: input_test.rs  sprite_test.rs  types_test.rs
crates/smdc/: Cargo.toml
crates/smdc/src/: lib.rs  main.rs
crates/smdc/src/backend/: mod.rs
crates/smdc/src/backend/m68k/: assembler.rs  emit.rs  encoder.rs  m68k.rs  mod.rs  sdk.rs  symfile.rs
crates/smdc/src/backend/m68k/sdk/: deps.rs  inline.rs  library.rs  mod.rs  registry.rs  tests.rs
crates/smdc/src/backend/rom/: builder.rs  checksum.rs  header.rs  mod.rs  vectors.rs
crates/smdc/src/common/: error.rs  mod.rs  span.rs
crates/smdc/src/driver/: mod.rs
crates/smdc/src/frontend/: mod.rs
crates/smdc/src/frontend/c/: mod.rs  preprocessor.rs
crates/smdc/src/frontend/c/ast/: decl.rs  expr.rs  mod.rs  stmt.rs  types.rs
crates/smdc/src/frontend/c/lexer/: mod.rs  scanner.rs  token.rs
crates/smdc/src/frontend/c/parser/: mod.rs  parser.rs
crates/smdc/src/frontend/c/sema/: analyzer.rs  mod.rs  scope.rs
crates/smdc/src/frontend/rust/: mod.rs
crates/smdc/src/frontend/rust/ast/: expr.rs  item.rs  mod.rs  pattern.rs  stmt.rs  types.rs
crates/smdc/src/frontend/rust/lexer/: mod.rs  scanner.rs  token.rs
crates/smdc/src/frontend/rust/mir/: lower.rs  mod.rs  to_ir.rs  types.rs
crates/smdc/src/frontend/rust/parser/: mod.rs  parser.rs
crates/smdc/src/frontend/rust/sema/: analyzer.rs  mod.rs  scope.rs  types.rs
crates/smdc/src/ir/: builder.rs  inst.rs  mod.rs
crates/smdc/src/types/: ir_type.rs  mod.rs
sdk/c/examples/: channel_test.c  hello.c  minimal.c  minimal_vdp.c  pong.c  test_simple.c  test_vdp.c
sdk/c/include/: smd.h
sdk/c/include/smd/: input.h  psg.h  samples.h  sprite.h  types.h  vdp.h  ym2612.h  z80.h
