[workspace]
resolver = "2"
members = [
    "crates/smdc",
    "crates/smd",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["SMD-SDK Team"]
repository = "https://github.com/smd-sdk/smd-compiler"

[workspace.dependencies]
# Lexer generator
logos = "0.14"
# CLI argument parsing
clap = { version = "4", features = ["derive"] }
# Error handling
thiserror = "1.0"
anyhow = "1.0"
# Error diagnostics with source locations
codespan-reporting = "0.11"
# String interning for identifiers
string-interner = "0.17"
# Testing
pretty_assertions = "1.4"

[profile.release]
lto = true
codegen-units = 1
