[package]
name = "smd"
description = "Sega Mega Drive / Genesis SDK for Rust"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
keywords = ["sega", "genesis", "megadrive", "retro", "gamedev", "no-std"]
categories = ["embedded", "no-std", "game-development"]

[lib]
name = "smd"
path = "src/lib.rs"

[features]
default = []

[dependencies]
# No dependencies - bare metal target
