[package]
name = "smdc"
description = "C and Rust compiler for Sega Mega Drive/Genesis (M68000)"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "smdc"
path = "src/main.rs"

[lib]
name = "smd_compiler"
path = "src/lib.rs"

[dependencies]
logos.workspace = true
clap.workspace = true
thiserror.workspace = true
anyhow.workspace = true
codespan-reporting.workspace = true
string-interner.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
